# tutor-credentials

./: .editorconfig  .gitignore  .gitlab-ci.yml  .hatch_build.py  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  linter.sh  pyproject.toml  setup.py
.github/workflows/: sync.yml  test.yml
changelog.d/: 20231020_183811_hina.khadim_miss_manifest_entry.md  20231114_144930_faraz.maqsood_fix_site_configuration_issue.md  20231120_151807_arbrandes_learner_record_mfe.md  20231121_114409_regis_fix_nodeenv.md  20231124_152344_faraz.maqsood_fix_missing_configs.md  20231130_110806_regis_simplify.md  20231201_145651_Talha-Rizwan_tutor_quince.md  20240114_095941_i_atlas.md  20240507_165604_rohansaeed.md  20240508_141227_faraz.maqsood_python_upgrade_to_v3_11_9.md  20240607_105741_evgen.dyudyunov_fix_image_push.md  20240805_154104_hina.khadim_update_dockerfile.md  20241010_175810_faraz.maqsood_ubuntu_upgrade.md  20241017_154649_faraz.maqsood_revert_arm64_build_skip_change.md  20241022_194734_faraz.maqsood_uwsgi_workers_not_starting_properly.md  20250127_130934_mlabeeb03_pyproject_toml.md  20260317_152920_faraz.maqsood_no_time_zone_found_with_key_UTC_error.md  20260325_201143_faraz.maqsood_add_git_config_for_applying_patches.md  20260325_201416_faraz.maqsood_cherry_pick_fixes.md  20260401_164245_glugovgrglib_openedx_dep_update.md  20260402_195333_faraz.maqsood_didkit_package_update_patch.md  20260415_174443_ali.abbas02_python_version_upgrade.md  20260528_164607_glugov1998_remove_patches_for_ulmo_3.md  fix-mysql-concat.md  scriv.ini
pip-wheel-metadata/tutor_credentials-16.0.2.dist-info/: METADATA  entry_points.txt  top_level.txt
tutorcredentials/: __about__.py  plugin.py
tutorcredentials/patches/: caddyfile  k8s-deployments  k8s-jobs  k8s-services  kustomization-configmapgenerator  local-docker-compose-caddy-aliases  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-services  mfe-env-development  mfe-env-production  openedx-lms-common-settings  openedx-lms-development-settings  openedx-lms-production-settings
tutorcredentials/templates/credentials/apps/credentials/settings/: development.py  production.py
tutorcredentials/templates/credentials/apps/credentials/settings/partials/: common.py
tutorcredentials/templates/credentials/tasks/credentials/: build  init
tutorcredentials/templates/credentials/tasks/lms/: init
tutorcredentials/templates/credentials/tasks/mysql/: init  propagate_users.sql  select_users.sql  sync_users
