# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-credentials"
license = { text = "AGPL-3.0-only" }
authors = [
  {name = "Lawrence McDaniel"},
  {email = "lpm0073@gmail.com"},
]
maintainers = [
  {name = "Muhammad Labeeb"},
  {email = "muhammad.labeeb@arbisoft.com"},
]
description = "A Tutor plugin for Open edX Credentials service"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor>=19.0.0,<20.0.0",
  "tutor-discovery>=19.0.0,<20.0.0", 
  "tutor-mfe>=19.0.0,<20.0.0"
]
# these fields will be set by hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "tutor[dev]>=19.0.0,<20.0.0", 
  "pylint", 
  "black"
]

[project.entry-points."tutor.plugin.v1"]
credentials = "tutorcredentials.plugin"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Homepage = "https://docs.tutor.edly.io/"
Documentation = "https://docs.tutor.edly.io/"
Code = "https://github.com/overhangio/tutor-credentials"
Issues = "https://github.com/overhangio/tutor-credentials.git/issues"
Changelog = "https://github.com/overhangio/tutor-credentials/blob/release/CHANGELOG.md"
Community = "https://discuss.openedx.org/tag/tutor"

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutorcredentials"]
exclude = ["tests*"]

[tool.hatch.build.targets.wheel]
packages = ["tutorcredentials"]
