# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-credentials"
license = { text = "AGPL-3.0-only" }
authors = [
  {name = "Lawrence McDaniel"},
  {email = "lpm0073@gmail.com"},
]
maintainers = [
  {name = "Muhammad Faraz Maqsood"},
  {email = "faraz.maqsood@arbisoft.com"},
]
description = "A Tutor plugin for Open edX Credentials service"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
  "tutor>=21.0.0,<22.0.0",
  "tutor-discovery>=21.0.0,<22.0.0", 
  "tutor-mfe>=21.0.0,<22.0.0"
]
# these fields will be set by hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "tutor[dev]>=21.0.0,<22.0.0", 
  "ruff", 
]

[project.entry-points."tutor.plugin.v1"]
credentials = "tutorcredentials.plugin"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Homepage = "https://docs.tutor.edly.io/"
Documentation = "https://docs.tutor.edly.io/"
Code = "https://github.com/overhangio/tutor-credentials"
Issues = "https://github.com/overhangio/tutor-credentials.git/issues"
Changelog = "https://github.com/overhangio/tutor-credentials/blob/release/CHANGELOG.md"
Community = "https://discuss.openedx.org/tag/tutor"

[tool.hatch.version]
path = "tutorcredentials/__about__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutorcredentials"]
exclude = ["tests*"]

[tool.hatch.build.targets.wheel]
packages = ["tutorcredentials"]

[tool.ruff]
exclude = ["templates", "docs/_ext"]

[tool.ruff.lint]
# E: pycodestyle errors
# I: isort
# N: pep8-naming
select = ["E", "I", "N"]

# F401: unused-import
# F841: unused-variable
# W292: missing-newline-at-end-of-file
extend-select = ["F401", "F841", "W292"]

[tool.ruff.format]
